[package]
name = "lightningd-examples"
version = "0.1.0"
edition = "2021"
description = "Test and rust script ro experiment and learning lightningd stuff."
license = "MIT"
repository = "https://github.com/lvaccaro/lightningd-examples"
documentation = "https://docs.rs/lightningd/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoind = "0.32.0"
lightningd = { git = "https://github.com/lvaccaro/lightningd.git", rev="3140424017eb0075ba41a7b82a24f55cf3dcf25f", features = ["bitcoind_25_0"]}
clightningrpc = "0.3.0-beta.7"
miniscript = { version = "10.0.0", features = ["compiler"] }
env_logger = "0.9.0"
serde = { version = "1.0", optional = true }
hex = "0.4.3"
log = "0.4"
base64 = "0.21.2"

[[bin]]
name = "submarineswap"
path = "src/submarineswap.rs"