[package]
name = "LightningByExamples"
version = "0.1.0"
edition = "2021"
description = "Rudimental examples to learn the bitcoin & ligthning world with rust."
license = "MIT"
repository = "https://github.com/lvaccaro/lightning_by_examples"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoind = { version = "0.34.1", features = ["download","25_0"] }
lightningd = { git = "https://github.com/lvaccaro/lightningd.git", rev="38bdb36a3b117d1207cc9325e49060d298a1a958", features = ["bitcoind_25_0"]}
clightningrpc = "0.3.0-beta.8"
miniscript = { version = "11.0.0", features = ["compiler"] }
env_logger = "0.9.0"
serde = { version = "1.0", optional = true }
hex = "0.4.3"
log = "0.4"
base64 = "0.21.2"

[[bin]]
name = "submarineswap"
path = "src/submarineswap.rs"